--- a/webroot/css/photofy.css
+++ b/webroot/css/photofy.css
@@ -1,42 +1,192 @@
-#galleryShowtime
-{
+.grid_24.showtime {
+	margin-left: 0;
+	margin-right: 0;
+	margin-top: -14px;
 	width: 100%;
-	height: 300px;
+}
+
+#galleryShowtime {
+	width: 100%;
+	height: 580px;
 	overflow: hidden;
-    position: absolute;
-
+	position: absolute;
+	color: #fff;
+	padding-top: 20px;
 }
 
-#galleryShowtime a
-{
-	color: #1f90c5;
+#galleryShowtime h2 {
+	color: #ffffff;
 }
 
-#photofy a.photofy_overlay_close
-{
+#galleryShowtime a {
+	
+}
+
+#galleryShowtime a.photofy_overlay_close {
 	font-size: 12px;
+	left: -51px !important;
 }
 
-#photofy a.photofy_thumbnail
-{
+#galleryShowtime a.photofy_overlay_close.detail-close {
+	background: #BA181D;
+	padding: 3px 10px 6px;
+	text-decoration: none !important;
+	-webkit-transition: 0.1s linear all;
+	-moz-transition: 0.1s linear all;
+	-ms-transition: 0.1s linear all;
+	-o-transition: 0.1s linear all;
+	transition: 0.1s linear all;
+}
+
+#galleryShowtime a.photofy_overlay_close.detail-close:hover {
+	background: #E41C23;
+	text-indent: 5px;
+	-webkit-transition: 0.1s linear all;
+	-moz-transition: 0.1s linear all;
+	-ms-transition: 0.1s linear all;
+	-o-transition: 0.1s linear all;
+	transition: 0.1s linear all;
+	left: -56px !important;
+}
+
+#galleryShowtime a.photofy_thumbnail {
 	border: 1px solid #eee;
 	display: block;
 	float: left;
 	text-decoration: none;
-	width: 100px;
-	height: 130px;
+	width: 150px;
+	height: 211px;
 	margin: 5px;
-	
 }
 
-#photofy a img
-{
+#galleryShowtime a img {
 	border: none;
-	width: 100px;
-	height: 130px;
+	width: 100%;
+	height: 100%;
+}
+
+/*black background */
+.photofy_overlay {
+
+}
+
+.photofy_overlay .photofy_overlayContent {
+	width: 660px;
+	height: 340px;
+	margin: 0 auto;
+	top: 49px !important;
+	background: rgba(0,0,0,.5)
+}
+
+.photofy_overlay .photofy_overlay_html {
+	width: 415px;
+	padding: 10px !important;
+}
+
+.photofy_overlay .photofy_overlayImage {
+	width: 200px;
+	left: 450px !important;
+	height: 250px;
+	top: 20px !important;
+}
+
+.photofy_overlay .photofy_overlayImage img {
+	height: auto !important;
+}
+
+/* DETAIL MOVIE */
+
+.photofy_overlay_html {
+	color: #ffffff;
+	font-family: 'TitilliumText22LBold',sans-serif;
 }
 
 
-#photofy .photofy_overlayContent {
+.detail-movie-title {
+	font-size: 24px;
+	font-weight: bold;
+	margin-bottom: 10px;
+}
+.detail-synopsis-panel {
+	margin-bottom: 10px;
+}
+.detail-synopsis-text {
+	margin: 10px 0;
+}
 
+.detail-vod-type {
+	background: #ccc;
+	color: #fff;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px; 
+	padding: 2px 3px 2px 6px;
+	margin-bottom: 10px;
+}
+
+.detail-available-panel {
+	background: #1B1B1B;
+	padding: 5px;
+	position: absolute;
+	width: 400px;
+	bottom: 0;
+	border-bottom: 3px solid #92BD1E;
+	-moz-border-radius: 5px 5px 0px 0px;
+	-webkit-border-radius: 5px 5px 0px 0px;
+	border-radius: 5px 5px 0px 0px;
+}
+
+.detail-available-panel #available {
+	font-size: 16px;
+	font-weight: bold;
+	margin-bottom: 10px;
+}
+
+.detail-vod-type,
+.detail-available-panel .detail-table th {
+	font-size: 16px;
+	font-weight: bold;
+}
+
+.detail-available-panel .detail-table td {
+	font-size: 13px;
+	font-weight: bold;
+}
+
+.detail-available-panel .detail-table tr {
+	line-height: 30px;
+	border-bottom: 1px solid #333;
+}
+
+#detail-available-date,
+#detail-available-price {
+	padding: 3px 5px;
+	background: #333333;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+}
+
+.media-on {
+	margin-right: 10px;
+}
+
+/* CUSTOM STYLE for CUSTOM VOD TYPE */
+
+.detail-movie.tvod .detail-vod-type,
+.detail-movie.tvod #detail-available-price {
+	background: #1E63B1;
+}
+
+.detail-movie.tvod .detail-available-panel {
+	border-bottom-color: #1E63B1;
+}
+
+.detail-movie.svod .detail-vod-type,
+.detail-movie.svod #detail-available-price {
+	background: #6F8E16;
+}
+
+.detail-movie.svod .detail-available-panel {
+	border-bottom-color: #92BD1E;
 }
